--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -2,15 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>Infrastructure_</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DependencyInjections\" />
-    <Folder Include="Loggers\" />
-    <Folder Include="Mappings\" />
+    <Folder Include="DTOs\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
