--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ServerConnection": "Server=.\\SQLEXPRESS;Database=ReenbitDemo;TrustServerCertificate=True;Trusted_Connection=true;"
+  }
 }
