--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ServerConnection": "Server=.\\SQLEXPRESS;Database=ReenbitDemo;TrustServerCertificate=True;Trusted_Connection=true;"
+    "ServerConnection": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;"
   }
 }
