--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ServerConnection": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;"
+  },
+  "Jwt": {
+    "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
+    "Issuer": "https://localhost:7157",
+    "Audience": "https://localhost:4200"
   }
 }
