added cors, some basic error string

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -12,6 +12,12 @@
   "Jwt": {
     "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
     "Issuer": "https://localhost:7157",
-    "Audience": "https://localhost:4200"
+    "Audience": "http://localhost:4200"
+  },
+  "Policies": {
+    "LocalPolicy": {
+      "Name": "LocalPolicy",
+      "Origin": "http://localhost:4200"
+    }
   }
 }
