--- a/client/angular.json
+++ b/client/angular.json
@@ -60,6 +60,12 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+          "options": {
+            "ssl": true,
+            "sslCert": "cert.crt",
+            "sslKey": "cert.key",
+            "port": 4200
+          },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
