Update build.yml for Azure Pipelines

--- a/build.yml
+++ b/build.yml
@@ -66,6 +66,7 @@ steps:
     command: custom
     verbose: false
     customCommand: 'run build'
+    workingDir: $(clientDir)
 
 - task: ArchiveFiles@2
   displayName: Zip Angular dist folder
