--- a/.gitignore
+++ b/.gitignore
@@ -430,6 +430,7 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+*.tfplan
 
 # Ignore CLI configuration files
 .terraformrc
@@ -437,3 +438,4 @@ terraform.rc
 
 # Custom
 /azure
+Infrastructure/Terraform/realVariables.txt
