configured connection between server and database

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalServerConnectionString": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;"
+    "LocalServerConnectionString": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;",
+    "AzureSQLConnectionString": ""
   },
   "Jwt": {
     "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
