Update build.yml for Azure Pipelines

--- a/build.yml
+++ b/build.yml
@@ -71,7 +71,7 @@ stages:
         inputs:
           command: custom
           verbose: false
-          customCommand: 'run build'
+          customCommand: 'run build --configuration=production'
           workingDir: $(clientDir)
 
       - task: ArchiveFiles@2
