--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalServerConnectionString": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;",
-    "AzureSQLConnectionString": ""
+    "LocalServerConnectionString": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;"
   },
   "Jwt": {
     "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
