implemented communication handling at both client and server

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -9,15 +9,23 @@
   "ConnectionStrings": {
     "LocalServerConnectionString": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;"
   },
-  "Jwt": {
+  "LocalJwtConfig": {
     "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
     "Issuer": "https://localhost:7157",
     "Audience": "https://localhost:4200"
+  },
+  "ProductionJwtConfig": {
+    "Issuer": "server-14866.azurewebsites.net",
+    "Audience": "client-14866.azurewebsites.net"
   },
   "Policies": {
     "LocalPolicy": {
       "Name": "LocalPolicy",
       "Origin": "https://localhost:4200"
+    },
+    "ProductionPolicy": {
+      "Name": "ProductionPolicy",
+      "Origin": "client-14866.azurewebsites.net"
     }
   }
 }
