fixed urls names

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -15,8 +15,8 @@
     "Audience": "https://localhost:4200"
   },
   "ProductionJwtConfig": {
-    "Issuer": "server-14866.azurewebsites.net",
-    "Audience": "client-14866.azurewebsites.net"
+    "Issuer": "https://server-14866.azurewebsites.net",
+    "Audience": "https://client-14866.azurewebsites.net"
   },
   "Policies": {
     "LocalPolicy": {
@@ -25,7 +25,7 @@
     },
     "ProductionPolicy": {
       "Name": "ProductionPolicy",
-      "Origin": "client-14866.azurewebsites.net"
+      "Origin": "https://client-14866.azurewebsites.net"
     }
   }
 }
