--- a/client/angular.json
+++ b/client/angular.json
@@ -25,8 +25,13 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
-                "glob": "web.config",
+                "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "web.config",
+                "input": "./",
+                "output": "./"
               }
             ],
             "styles": [
