configured client and server names to be more flexible

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -11,21 +11,23 @@
   },
   "LocalJwtConfig": {
     "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
-    "Issuer": "https://localhost:7157",
-    "Audience": "https://localhost:4200"
+    "Issuer": "https://{ServerName}",
+    "Audience": "https://{ClientName}"
   },
   "ProductionJwtConfig": {
-    "Issuer": "https://server-14866.azurewebsites.net",
-    "Audience": "https://client-14866.azurewebsites.net"
+    "Issuer": "https://{ServerName}",
+    "Audience": "https://{ClientName}"
   },
   "Policies": {
     "LocalPolicy": {
       "Name": "LocalPolicy",
-      "Origin": "https://localhost:4200"
+      "Origin": "https://{ClientName}"
     },
     "ProductionPolicy": {
       "Name": "ProductionPolicy",
-      "Origin": "https://client-14866.azurewebsites.net"
+      "Origin": "https://{ClientName}"
     }
-  }
+  },
+  "ClientName": "localhost:4200",
+  "ServerName": "localhost:7157"
 }
