--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -15,6 +15,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+		<PackageReference Include="TemplateFormattedConfiguration" Version="2022.7.9.2" />
 	</ItemGroup>
 
 	<ItemGroup>
