Update build.yml for Azure Pipelines

--- a/build.yml
+++ b/build.yml
@@ -60,7 +60,7 @@ stages:
           rootFolderOrFile: '$(Build.ArtifactStagingDirectory)/AzureFunctions'
           includeRootFolder: false
           archiveType: 'zip'
-          archiveFile: '$(Build.ArtifactStagingDirectory)/AzureFunctions'
+          archiveFile: '$(Build.ArtifactStagingDirectory)/AzureFunctions/AzureFunctions'
           replaceExistingArchive: true
 
       - task: CopyFiles@2
