--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -9,25 +9,18 @@
   "ConnectionStrings": {
     "LocalServerConnectionString": "Server=.\\SQLEXPRESS;Database=ReenbitProjectDb;TrustServerCertificate=True;Trusted_Connection=true;"
   },
-  "LocalJwtConfig": {
+  "DefaultJwtConfig": {
     "Key": "BBC709BB-0355-4F58-AC14-5EC0CFBA53B2",
     "Issuer": "https://{ServerName}",
     "Audience": "https://{ClientName}"
   },
-  "ProductionJwtConfig": {
-    "Issuer": "https://{ServerName}",
-    "Audience": "https://{ClientName}"
-  },
   "Policies": {
-    "LocalPolicy": {
-      "Name": "LocalPolicy",
-      "Origin": "https://{ClientName}"
-    },
-    "ProductionPolicy": {
-      "Name": "ProductionPolicy",
+    "DefaultPolicy": {
+      "Name": "DefaultPolicy",
       "Origin": "https://{ClientName}"
     }
   },
   "ClientName": "localhost:4200",
-  "ServerName": "localhost:7157"
+  "ServerName": "localhost:7157",
+  "ImagesContainerName": "images"
 }
