--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,7 @@
     "jwt-decode": "^4.0.0",
     "libphonenumber-js": "^1.11.9",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.3",
